--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,5 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "drug-data-pipelines"
+name = "drugs-data-pipeline"
 version = "0.1.0"
