--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,22 +10,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up python3
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11.9'
+          python3-version: '3.11.9'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-          python -m pip install black sqlfluff
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
+          python3 -m pip install black sqlfluff
 
       - name: Check formatting with Black
-        run: python -m black --check .
+        run: python3 -m black --check .
 
       - name: Check SQL syntax with SQLFluff (PostgreSQL)
         run: sqlfluff lint . --dialect postgres
 
       - name: Run tests with pytest
-        run: python -m pytest tests/sql/sales_categorisation_test.py::test_sales_categorisation_query
+        run: python3 -m pytest tests/sql/sales_categorisation_test.py::test_sales_categorisation_query
